syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/DaniilKalts/microservices-course-2023/3-week/gen/go/chat/v1;chatv1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

// Create

message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    string id = 1;
}

// Delete

message DeleteRequest {
    string id = 1;
}

// SendMessage

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}